Fix even more spacing

--- a/css/main.css
+++ b/css/main.css
@@ -29,8 +29,8 @@ body {
   width: 100%;
   position: absolute;
   left: 50%;
-  top: 10%;
-  transform: translateX(-50%);
+  top: 50%;
+  transform: translate(-50%, -50%);
 
   display: flex;
   flex-direction: row;
@@ -50,7 +50,9 @@ body {
 }
 
 .btn-big {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin: 0 1.5rem;
   padding-right: .5em;
 }
@@ -68,6 +70,10 @@ body {
 
   font-family: Roboto, sans-serif;
   font-size: 1.5rem;
+}
+
+.link {
+  display: inline-block;
 }
 
 .btn {
